k8s/keycloak-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: keycloak-db
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: keycloak-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: keycloakdb
            - name: POSTGRES_PASSWORD
              value: securepassword
            - name: POSTGRES_USER
              value: keycloak
          image: postgres:14
          name: keycloak-db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-db-data
      restartPolicy: Always
      volumes:
        - name: keycloak-db-data
          persistentVolumeClaim:
            claimName: keycloak-db-data
