k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    io.kompose.service: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args:
            - start-dev
            - --hostname-url=http://keycloak.localhost
            - --hostname-admin-url=http://keycloak.localhost
            - --hostname-strict=false
            - --db=postgres
            - --db-url=jdbc:postgresql://keycloak-db:5432/keycloakdb
            - --db-username=keycloak
            - --db-password=securepassword
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/keycloak/data
              name: keycloak-data
      hostname: keycloak
      restartPolicy: Always
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-data
