k8s/quiz-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: quiz-service
  name: quiz-service
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: quiz-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: quiz-service
    spec:
      containers:
        - env:
            - name: PORT
              value: "3003"
            - name: QUIZ_MONGO_URI
              valueFrom:
                secretKeyRef:
                  name: quiz-mongo-uri
                  key: quiz-mongo-uri
          image: flapinski95/quiz-service:fixed-
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
          name: quiz-service
          ports:
            - containerPort: 3003
              protocol: TCP
      restartPolicy: Always
