k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 
  selector:
    matchLabels:
      io.kompose.service: user-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: user-service
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://flapinski:cyckidupcia@postgres:5432/wordmaster
            - name: PORT
              value: "3002"
          image: flapinski95/user-service:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:3002/health
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: user-service
          ports:
            - containerPort: 3002
              protocol: TCP
      restartPolicy: Always
