k8s/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: gateway-service
  name: gateway-service
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: gateway-service
