k8s/quiz-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: quiz-service
  name: quiz-service
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    io.kompose.service: quiz-service
